# ccpm

./: CMakeLists.txt  Make.sh  README.md  packages.json
.scripts/: Format.sh
include/: BuildType.hpp  Inline.h  Package.hpp  PackageInstaller.hpp  PackageSearcher.hpp  PackagesFetcher.hpp  Urls.hpp
minizpp/: CMakeLists.txt
minizpp/include/Minizpp/: Extractor.hpp
minizpp/src/: Extractor.cpp
src/: PackageInstaller.cpp  PackageSearcher.cpp  PackagesFetcher.cpp  main.cpp
